--- a/website/index.html
+++ b/website/index.html
@@ -18,7 +18,7 @@
     <option value="5">-12 dB</option>
     <option value="6">- 9 dB</option>
     <option value="7">- 6 dB</option>
-    <option value="8" selected>- 3 dB</option>
+    <option value="8">- 3 dB</option>
     <option value="9">  0 dB</option>
     <option value="a">  3 dB</option>
     <option value="b">  6 dB</option>
@@ -52,7 +52,7 @@
       <option value="d">- 3 dB</option>
       <option value="e">  0 dB</option>
       <option value="f">  3 dB</option>
-      <option value="10" selected>  6 dB</option>
+      <option value="10">  6 dB</option>
       <option value="11">  9 dB</option>
       <option value="12"> 12 dB</option>
       <option value="13"> 15 dB</option>
