--- a/website/index.html
+++ b/website/index.html
@@ -1,14 +1,18 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>bt-trx Webinterface</title>
+</head>
 <link rel="stylesheet" type="text/css" href="style.css"/>
 <script src="script.js"></script>
 <body onload="getAllParameters()">
 <p class="title">bt-trx</p>
 <form>
 <h1>Settings</h1>
-<table width=100%>  
-  <tr><td>ADC Gain (Audio from TRX)</td>
-    <td><select class=slct name="adc_gain" id="adc_gain" onchange='OnDropdownChange(this.form.adc_gain);'>
+<table>  
+  <tr><td class=descr>ADC Gain<br>(Audio from TRX)</td>
+    <td class=set><select name="adc_gain" id="adc_gain" onchange='OnDropdownChange(this.form.adc_gain);'>
     <option value="0">-27 dB</option>
     <option value="1">-24 dB</option>
     <option value="2">-21 dB</option>
@@ -33,8 +37,8 @@
     <option value="15"> 36 dB</option>
     <option value="16"> 39 dB</option>
   </select></td></tr>
-  <tr><td>DAC Gain (Audio to TRX)</td>
-    <td><select class=slct name="dac_gain" id="dac_gain" onchange='OnDropdownChange(this.form.dac_gain);'>
+  <tr><td class=descr>DAC Gain<br>(Audio to TRX)</td>
+    <td class=set><select name="dac_gain" id="dac_gain" onchange='OnDropdownChange(this.form.dac_gain);'>
       <option value="0">-42 dB</option>
       <option value="1">-39 dB</option>
       <option value="2">-36 dB</option>
@@ -60,12 +64,12 @@
       <option value="16"> 24 dB</option>
   </select></td></tr>
   <tr>
-    <td>Bluetooth PIN Code</td>
-    <td><input type="text" name="pin_code" id="pin_code" class=pin maxlength=4 onkeypress='return event.charCode >= 48 && event.charCode <= 57'>
+    <td class=descr>Bluetooth PIN Code</td>
+    <td class=set><input type="text" name="pin_code" id="pin_code" class=pin maxlength=4 onkeypress='return event.charCode >= 48 && event.charCode <= 57'>
       <input type="button" class=btn value="Set" onclick='setData("pin_code", this.form.pin_code.value);'></td>
   </tr>
-  <tr><td>Reset Bluetooth Pairings</td>
-  <td><input type="button" class=btn value="Reset" onclick='OnButtonClick("resetBTPairings");'></td></tr>
+  <tr><td class=descr>Reset Bluetooth Pairings</td>
+  <td class=set><input type="button" class=btn value="Reset" onclick='OnButtonClick("resetBTPairings");'></td></tr>
 </table>
 </form>
 
@@ -74,7 +78,7 @@
 	<tr><td><h1>Firmware Update</h1></td></tr>
 	<tr><td><input type='file' name='update' id='file'></td></tr>
   <tr><td><input type='submit' class=btn value='Update'></td></tr>
-  <tr><td><center>Current Firmware Version: %GIT_REVISION%</center></td></tr>
+  <tr><td>Current Firmware Version: %GIT_REVISION%</td></tr>
 	</table>
 </form>
 
