--- a/website/update_result.html
+++ b/website/update_result.html
@@ -1,7 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>bt-trx Webinterface</title>
+</head>
 <link rel="stylesheet" type="text/css" href="style.css"/>
 <body>
+<p class="title">bt-trx</p>
 <form>Firmware Update %RESULT%, rebooting...</form>
 </body>
 </html>
