[#36] Tested logic for Willimode, integrated Webinterface

--- a/website/index.html
+++ b/website/index.html
@@ -87,6 +87,10 @@
       <input type="button" value="Set" onclick='setData("ptt_hang_time", this.form.ptt_hang_time.value);'>
     </td>
   </tr>
+  <tr>
+    <td class=descr>PTT Willi-Mode</td>
+    <td><input type="checkbox" name="ptt_willi_en" id="ptt_willi_en" onclick='OnCheckboxChange(this.form.ptt_willi_en);'></td>
+  </tr>
   <tr><td colspan=2><h2>Bluetooth</h2></td></tr>
   <tr>
     <td class=descr>Bluetooth PIN Code</td>
