#44 Show current state in Webinterface

--- a/website/index.html
+++ b/website/index.html
@@ -9,6 +9,12 @@
 <body onload="getAllParameters()">
 <p class="title">bt-trx <span id="callsigntag"></span></p>
 <form>
+  <table>
+    <tr><td><h1>Status</h1></td></tr>
+    <tr><td><h3><span id="statusmessage"></h3></td></tr>
+  </table>
+</form>
+<form>
 <table>
   <tr><td colspan=2><h1>Settings</h1></td></tr>
   <tr><td colspan=2><h2>Identification</h2></td></tr>
