#30 Implemented Audio via SCO command

--- a/website/index.html
+++ b/website/index.html
@@ -116,6 +116,11 @@
     <td class=descr>Reset Bluetooth Pairings</td>
     <td class=set><input type="button" value="Reset" onclick='OnButtonClick("resetBTPairings");'></td>
   </tr>
+  <tr><td colspan=2><h2>Experimental</h2></td></tr>
+  <tr>
+    <td class=descr>Direct Audio</td>
+    <td><input type="checkbox" name="direct_audio_en" id="direct_audio_en" onclick='OnCheckboxChange(this.form.direct_audio_en);'></td>
+  </tr>
 </table>
 </form>
 
